--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@ body.overflow-hidden {
   height: 100%;
   overflow-y: auto;
   z-index: 999999;
-  background: #7d26cd;
+  background: var(--theme-yellow);
   padding: 0px;
   color: #fff;
   transition: 0.4s;
@@ -403,7 +403,7 @@ body.side-menu-visible #side-menu.side-menu-left {
   display: flex;
   justify-content: space-between;
   padding: 25px 15px;
-  background-color: #4e088e;
+  background-color: var(--theme-blue);
   align-items: center;
 }
 .hero_item {
@@ -2226,18 +2226,179 @@ span.offer_item {
   font-style: italic;
   margin-bottom: 5px;
 }
+
+/***********************contact page***********/
+.conatct_map_Sec {
+  padding: 70px 0;
+}
+.contact_map_content h6 {
+  color: var(--theme-yellow);
+}
+.contact_map_content h2 {
+  font-size: 60px;
+  margin-bottom: 15px;
+}
+.contact_map_content p,
+.contact_form_inbner p {
+  font-size: 20px;
+  width: 60%;
+  margin: 0px auto;
+  color: rgb(141, 141, 141);
+}
+.contact_form_inbner h4 {
+  font-size: 40px;
+  margin-bottom: 15px;
+}
+.input_form input {
+  width: 100%;
+  height: 55px;
+  padding: 15px;
+  background-color: #dcdcdc;
+  color: #000;
+  border-radius: 8px;
+  border: none;
+  margin-bottom: 30px;
+  border: 2px solid transparent;
+}
+.input_form input:focus,
+.input_form input:hover,
+.input_form textarea:focus,
+.input_form textarea:hover {
+  border: 2px solid var(--theme-yellow);
+}
+.input_form textarea {
+  width: 100%;
+  height: 155px;
+  padding: 15px;
+  background-color: #dcdcdc;
+  color: #000;
+  border-radius: 8px;
+  border: none;
+  margin-bottom: 30px;
+  border: 2px solid transparent;
+}
+.form_submit_btn {
+  width: 100%;
+  border: none;
+  background-color: var(--theme-yellow);
+  color: #000;
+  padding: 15px 50px;
+  border-radius: 50px;
+  font-family: var(--body-font);
+  font-size: 20px;
+  font-weight: 600;
+}
+.single_contact_info {
+  display: flex;
+  align-items: flex-start;
+}
+.contact_icon img {
+  width: 60px;
+  margin-right: 15px;
+}
 /****************responsive*******************/
 
-@media (max-width: 575.98px) {
-}
-
 @media (max-width: 991.98px) {
+  .main_nav button.navbar-toggler {
+    position: absolute;
+    right: 0;
+    top: -30px;
+  }
+  .mode_tab {
+    height: 70vh;
+    background-size: cover;
+  }
 }
 
 @media (max-width: 767.98px) {
+  .hero_banner_content_sec {
+    display: block;
+  }
+  .hero_banner_content,
+  .hero_banner_img {
+    width: 100%;
+  }
+  .top_info ul {
+    justify-content: space-between;
+  }
+  .top_info ul li {
+    margin-right: 0;
+  }
+  .hero_banner_content h2 {
+    font-size: 60px;
+  }
+  .hero_banner_content h4 {
+    font-size: 30px;
+  }
+  .hero_item .slick-arrow {
+    top: 80%;
+  }
+  .hero_banner_img .brnad_name {
+    font-size: 120px;
+  }
+  .hero_thumb {
+    display: none !important;
+  }
+  .single_parts img {
+    width: 100%;
+  }
+  .body_part_slider .slide-arrow.prev-arrow {
+    left: 20px;
+  }
+  .offer_inner h4 {
+    font-size: 60px;
+  }
+  .body_part_slider .slick-dots {
+    bottom: 0;
+  }
+  .home_product_content_wrapper {
+    margin-top: 30px;
+  }
+  .accessories_title {
+    display: block !important;
+  }
+  .main_price {
+    font-size: 25px;
+  }
+  .buy_now_sec .shop_now {
+    font-size: 16px;
+    letter-spacing: 0;
+    padding: 10px 40px;
+  }
+  .accessories_title h4 {
+    font-size: 30px;
+  }
+  .first_feature_slide .pos2 {
+    top: 36%;
+  }
+  .first_feature_slide .pos5 {
+    top: 40%;
+  }
+  .first_feature_slide .pos4 {
+    top: 26%;
+  }
+  .first_feature_slide .pos3 {
+    left: 91%;
+  }
 }
 
 @media (max-width: 1199.98px) {
+  .first_feature_slide .pos2 {
+    left: 37%;
+    top: 31%;
+  }
+  .first_feature_slide .pos5 {
+    top: 35%;
+  }
+  .first_feature_slide .pos4 {
+    top: 20%;
+  }
+  .first_feature_slide .pos3 {
+    left: 94%;
+  }
+  .feature_big_title {
+    font-size: 15vh;
+  }
 }
 @media (max-width: 1399.98px) {
   .hero_thumb_item {
@@ -2259,5 +2420,42 @@ span.offer_item {
   }
   .mode_tab_btn_group {
     width: 53%;
+  }
+}
+@media (max-width: 575.98px) {
+  .cycle_animated_fream {
+    max-width: 100%;
+    right: 0px;
+    width: 425px;
+  }
+  .cycle_body {
+    width: 350px;
+    position: absolute;
+    right: 0;
+    bottom: 80px;
+  }
+  .cycle_animated_fream .frontwheel {
+    width: 150px;
+    left: 16px;
+    bottom: 30px;
+    z-index: -1;
+    position: absolute;
+  }
+  .cycle_animated_fream .backwheel {
+    width: 150px;
+    right: 2px;
+    bottom: 30px;
+    z-index: -1;
+    position: absolute;
+  }
+  .cycle_animated_fream .padel {
+    bottom: 64px;
+    right: 166px;
+    position: absolute;
+    z-index: auto;
+    width: 59px;
+  }
+  .cart_menu {
+    display: none;
   }
 }
